paperless-ngx/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-broker
  namespace: tsebra-home
spec:
  selector:
    app: paperless-broker
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
