paperless-ngx/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-db
  namespace: tsebra-home
spec:
  selector:
    app: paperless-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
