paperless-ngx/gotenberg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
  namespace: tsebra-home
spec:
  selector:
    app: paperless-gotenberg
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
