paperless-ngx/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: tsebra-home
  labels:
    app: paperless
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: paperless
