paperless-ngx/webserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: tsebra-home
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: paperless
      port:
        number: 8000
  tls:
    - hosts:
        - paperless
